# nolimitconnect

./: .gitignore  AppCommonConfig.h  AppCompilerConfig.h  AppCpuArchDefines.h  AppDependLibrariesConfig.h  AppTargetOsConfig.h  Build1_PythonDepends.pro  Build3_PythonDllLibs.pro  Build4_MovePythonDlls.pro  Build5_NlcDependLibs.pro  Build6_AppAndCore_Optional.pro  Build6_NlcCoreWithKodi.pro  Build7_NlcAppOnly.pro  Build7_NlcAppOnlyWithKodi.pro  BuildA_Python.pro  BuildB_NoLimitConnectCore.pro  BuildC_NoLimitConnectApp.pro  BuildKodi1_PythonDepends.pro  BuildKodi2_PythonCoreLib.pro  BuildNlc1_NlcDependLibs.pro  BuildNlc2_NlcCore.pro  BuildNlc3_NlcAppOnly.pro  Build_All.pro  Build_Client_Test.pro  CMakeLists.txt  GoTvAppConfig.h.kodiptop  GoTvCompilerConfig.h  GoTvCpuArchDefines.h  GoTvPtoPAppLib.pri  GoTvPtoPAppLib.pro  GoTvPtoPVersion.txt  GoTvPtoP_App.pro  GoTvPtoP_AppAndroid.pro  GoTvPtoP_AppLinux.pro  GoTvPtoP_AppWindows.pro  GoTvPtoP_AppWithKodi.pro  NlcCommonConfig.h  NlcCompilerConfig.h  NlcCpuArchDefines.h  NlcDependLibrariesConfig.h  (+76 more)
AppsSrc/CommonSrc/: CMakeLists.txt  NoLimitConnect.qrc
AppsSrc/CommonSrc/Forms/: ActivityBase.ui  ActivityBrowseFiles.ui  ActivityCreateAccount.ui  ActivityMessageBox.ui  ActivityNetworkStatus.ui  ActivityPermissions.ui  AppletAboutApp.ui  AppletAboutMeClient.ui  AppletApplicationInfo.ui  AppletBrowseFiles.ui  AppletCamClient.ui  AppletCamTest.ui  AppletChatRoomJoinSearch.ui  AppletEditAboutMe.ui  AppletEditAvatarImage.ui  AppletEditStoryBoard.ui  AppletFileShareClientView.ui  AppletFriendListClient.ui  AppletGetStarted.ui  AppletGroupHostSettings.ui  AppletGroupJoin.ui  AppletGroupJoinSearch.ui  AppletGroupListClient.ui  AppletGroupListLocalView.ui  AppletHostNetworkStatus.ui  AppletIgnoredHosts.ui  AppletInviteCreate.ui  AppletLibrary.ui  AppletLog.ui  AppletMultiMessenger.ui  AppletNearbyListClient.ui  AppletNetworkSettings.ui  AppletPeerChangeFriendship.ui  AppletPeerReplyOfferFile.ui  AppletPeerVoicePhone.ui  AppletPlayerCamClip.ui  AppletPlayerPhoto.ui  AppletRandomConnectJoinSearch.ui  AppletServiceBase.ui  AppletServiceBaseSettings.ui  (+36 more)
AppsSrc/CommonSrc/QtSource/: AcceptCancelWidget.cpp  AcceptCancelWidget.h  AccountDb.cpp  AccountDb.h  AccountMgr.cpp  AccountMgr.h  ActivityAddRemoveLibraryFiles.cpp  ActivityAddRemoveLibraryFiles.h  ActivityAppSetup.cpp  ActivityAppSetup.h  ActivityBase.cpp  ActivityBase.h  ActivityBrowseFiles.cpp  ActivityBrowseFiles.h  ActivityChooseTestWebsiteUrl.cpp  ActivityChooseTestWebsiteUrl.h  ActivityCreateAccount.cpp  ActivityCreateAccount.h  ActivityDownloadItemMenu.cpp  ActivityDownloadItemMenu.h  ActivityFileSearch.cpp  ActivityFileSearch.h  ActivityInformation.cpp  ActivityInformation.h  ActivityIsPortOpenTest.cpp  ActivityIsPortOpenTest.h  ActivityMessageBox.cpp  ActivityMessageBox.h  ActivityNetworkState.cpp  ActivityNetworkState.h  ActivityPermissions.cpp  ActivityPermissions.h  ActivityScanPeopleSearch.cpp  ActivityScanPeopleSearch.h  ActivityScanProfiles.cpp  ActivityScanProfiles.h  ActivityScanStoryBoards.cpp  ActivityScanStoryBoards.h  ActivityScanWebCams.cpp  ActivityScanWebCams.h  (+707 more)
AppsSrc/CommonSrc/QtSource/soundio/: AudioBitrate.cpp  AudioBitrate.h  AudioDefs.h  AudioEchoBuf.cpp  AudioEchoBuf.h  AudioEchoCancel.cpp  AudioEchoCancel.h  AudioEchoCancelImp.cpp  AudioEchoCancelImpl.cpp  AudioEchoCancelImpl.h  AudioInIo.cpp  AudioInIo.h  AudioInThread.cpp  AudioInThread.h  AudioIoMgr.cpp  AudioIoMgr.h  AudioLoopback.cpp  AudioLoopback.h  AudioLoopbackFrame.cpp  AudioLoopbackFrame.h  AudioMasterClock.cpp  AudioMasterClock.h  AudioMixer.cpp  AudioMixer.h  AudioMixerFrame.cpp  AudioMixerFrame.h  AudioMixerInterface.h  AudioMixerThread.cpp  AudioMixerThread.h  AudioOutIo.cpp  AudioOutIo.h  AudioOutThread.cpp  AudioSampleBuf.cpp  AudioSampleBuf.h  AudioSpeakerBuf.cpp  AudioSpeakerBuf.h  AudioTestGenerator.cpp  AudioTestGenerator.h  AudioUtils.cpp  AudioUtils.h
AppsSrc/CommonSrc/Resources/: CreditsArt.txt  index.htm  story_board.htm
ArtAssets/: SplashLandscape.xcf  SplashPortrait.xcf
DependLibs/: CMakeLists.txt
DependLibs/bzlib/: CMakeLists.txt  bzlib.h  bzlib_bz2.c  bzlib_private.h
DependLibs/libbzip2/cmake/: CMakeLists.txt
GoTvInterface/: IAudioInterface.h  IDefs.cpp  IDefs.h  IFromGui.h  IGoTv.h  IGoTvEvents.h  IGoTvFromGui.cpp  IGoTvRender.h  IGoTvToGui.cpp  IScan.h  IToGui.cpp  IToGui.h
GuiInterface/: GoTvRenderFrame.cpp  IAudioInterface.h  IDefs.cpp  IDefs.h  IFromGui.h  IGoTv.cpp  IGoTv.h  IGoTvEvents.h  IGoTvFromGui.cpp  IGoTvGeometry.h  IGoTvRender.cpp  IGoTvRender.h  IGoTvToGui.cpp  ILog.cpp  ILog.h  INlc.cpp  INlc.h  INlcEvents.h  INlcFromGui.cpp  INlcGeometry.h  INlcRender.cpp  INlcRender.h  INlcToGui.cpp  IScan.h  IToGui.cpp  IToGui.h  NlcRenderFrame.cpp  NlcRenderFrame.h  config_libgotvptop.h
SandboxApps/QtSimpleAppTest/: CMakeLists.txt  QtCreateBuildDirectories.pro  QtSimpleTestProject.pro  SimpleAppTest_README.txt  config_create_build_directories.pri  config_detect_os.pri  config_print_build_info.pri
SandboxApps/QtSimpleAppTest/QtSimpleTestApp/: CMakeLists.txt  LogWidget.cpp  QtSimpleTestApp.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SandboxApps/QtSimpleAppTest/QtSimpleTestSharedLib/: CMakeLists.txt  QtSimpleTestSharedLib.pro  qttestsharedlib3.h
SandboxApps/QtSimpleAppTest/QtSimpleTestStaticLib/: CMakeLists.txt  QtSimpleTestStaticLib.pro  qtteststaticlib3.cpp
SandboxApps/QtSimpleAppTest/cmake/Modules/: ConfigQt.cmake
UnitTest/: GoogleTestRunnerMain.cpp  _NoLimitUnitTests.cpp
bin-Android/: AndroidManifest.xml  build.gradle  gradle.properties
bin-Linux/: privacy-policy.txt
docs_for_building/: AdditionalSetupVS2019AndQt6.2.0.txt  Build_NoLimitConnect_ForAndroid.txt  Build_NoLimitConnect_ForAndroidInWindows.txt  Build_NoLimitConnect_ForLinuxInVBoxImage.txt  Build_NoLimitConnect_ForWindows.txt  Build_NoLimitConnect_ForWindowsPrerequisitesInstructions.txt  Build_NoLimitConnect_Qt5_12_3_ForWindowsPrerequisitesInstructions.txt  Build_NoLimitMinTestApp_Notes.txt  Create_Linux_Virtual_Image_VirtualBoxMint20_3.txt  CreatingTranslations.txt  (+13 more)
(+4793 files in other folders)
